Working on implementation of AFM ordering.

--- a/code/notebooks/debug-relabeling.ipynb
+++ b/code/notebooks/debug-relabeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0d96feaf-8817-453a-b4d0-560f5f29d33c",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a803505a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hubbard card before structure_relabel_kinds\n",
+      "\n",
+      " HUBBARD\tortho-atomic\n",
+      " U\tTi-3d\t5.0\n",
+      " V\tTi-3d\tO-2p\t1\t4\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t2\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t3\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t72\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t83\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t114\t0.0001\n",
+      " V\tTi-3d\tO-2p\t1\t69\t0.0001\n",
+      "\n",
+      "Hubbard card after structure_relabel_kinds\n",
+      "\n",
+      " HUBBARD\t{ortho-atomic}\n",
+      " U\tTi0-3d\t6.1627\n",
+      " V\tTi0-3d\tO2-2p\t1\t4\t1.5744\n",
+      " V\tTi0-3d\tO1-2p\t1\t2\t1.5742\n",
+      " V\tTi0-3d\tO1-2p\t1\t3\t1.5742\n",
+      " V\tTi0-3d\tO1-2p\t1\t72\t1.1762\n",
+      " V\tTi0-3d\tO1-2p\t1\t83\t1.1762\n",
+      " V\tTi0-3d\tO2-2p\t1\t114\t1.176\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib\n",
     "from aiida_quantumespresso_hp.calculations.functions import structure_relabel_kinds\n",
@@ -117,7 +147,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
