Moved class for configuration sampling outside.
Modifying StructureData for custom magnetic ordering works.

--- a/code/notebooks/backup.ipynb
+++ b/code/notebooks/backup.ipynb
@@ -82,6 +82,254 @@
     "# hubbard_structure = last_hpcalculation.outputs.hubbard_structure # hubbard structure of HpCalculation, 1. required argument\n",
     "# hubbard = last_hpcalculation.outputs.hubbard # hubbard dict of HpCalculation, 2. required argument"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "hubbard_structure = load_node(3075)\n",
+    "hp_workchain = load_node(4560)\n",
+    "\n",
+    "hubbard_structure_outside = hp_workchain.outputs.hubbard_structure\n",
+    "hubbard_dict_outside = hp_workchain.outputs.hubbard\n",
+    "\n",
+    "def structure_relabel_kinds_print(hubbard_structure, hubbard_dict, magnetization=None):\n",
+    "    \"\"\"Create a clone of the given structure but with new kinds, based on the new hubbard sites.\n",
+    "\n",
+    "    :param hubbard_structure: ``HubbardStructureData`` instance.\n",
+    "    :param hubbard: the ``hubbard`` output Dict node of a ``HpCalculation``.\n",
+    "    :param magnetization: Dict instance containing the `starting_magnetization` QuantumESPRESSO inputs.\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    # reference = hubbard_structure.clone()\n",
+    "    # # reference.reorder_atoms()  # we reorder the atoms with Hubbard atoms first\n",
+    "\n",
+    "    # relabeled = reference.clone()\n",
+    "    # relabeled.clear_kinds()\n",
+    "    # relabeled.clear_sites()\n",
+    "\n",
+    "    # kind_suffix = -1\n",
+    "    # type_to_kind = {}\n",
+    "\n",
+    "    # if magnetization:\n",
+    "    #     old_magnetization = magnetization.get_dict()\n",
+    "    #     new_magnetization = old_magnetization.copy()\n",
+    "    #     # Removing old Hubbard spin-polarized atom label.\n",
+    "    #     for site in hubbard_dict[\"sites\"]:\n",
+    "    #         new_magnetization.pop(site[\"kind\"], None)\n",
+    "\n",
+    "    # # First do the Hubbard sites, popping the kind name suffix each time a new type is encountered. We do the suffix\n",
+    "    # # generation ourselves, because the indexing done by hp.x contains gaps in the sequence.\n",
+    "    # for index, site in enumerate(hubbard_dict[\"sites\"]):\n",
+    "\n",
+    "    #     symbol = re.search(r\"^([A-za-z]+)[0-9]*$\", site[\"kind\"]).group(1)\n",
+    "    #     try:\n",
+    "    #         # We define a `spin_type`, since hp.x does not distinguish new types according to spin\n",
+    "    #         spin_type = str(int(site[\"new_type\"]) * int(site[\"spin\"]))\n",
+    "    #         kind_name = type_to_kind[spin_type]\n",
+    "    #     except KeyError:\n",
+    "    #         kind_suffix += 1\n",
+    "    #         kind_name = f\"{symbol}{kind_suffix}\"\n",
+    "    #         type_to_kind[spin_type] = kind_name\n",
+    "    #         if magnetization:\n",
+    "    #             # filling 'starting magnetization' with input value but new label;\n",
+    "    #             # if does not present a starting value, pass.\n",
+    "    #             try:\n",
+    "    #                 new_magnetization[kind_name] = old_magnetization[site[\"kind\"]]\n",
+    "    #             except KeyError:\n",
+    "    #                 pass\n",
+    "\n",
+    "    #     site = sites[index]\n",
+    "    #     # relabeled.append_atom(position=site.position, symbols=symbol, name=kind_name)\n",
+    "\n",
+    "    sites = hubbard_structure.sites\n",
+    "    # Now add the non-Hubbard sites\n",
+    "    for isite, site in enumerate(sites):\n",
+    "\n",
+    "        symbols = hubbard_structure.get_kind(site.kind_name).symbols\n",
+    "        names = hubbard_structure.get_kind(site.kind_name).name\n",
+    "        if isite in relabel_dict.keys():\n",
+    "            names = relabel_dict[isite]\n",
+    "\n",
+    "        print(symbols, names)\n",
+    "\n",
+    "        # print(relabeled)\n",
+    "        relabeled.append_atom(position=site.position, symbols=symbols, name=names)\n",
+    "\n",
+    "    # outputs = {\"hubbard_structure\": relabeled}\n",
+    "    # if magnetization:\n",
+    "    #     outputs.update({\"starting_magnetization\": Dict(new_magnetization)})\n",
+    "\n",
+    "    # return outputs\n",
+    "\n",
+    "def structure_relabel_kinds_mod(hubbard_structure, hubbard_dict, magnetization=None):\n",
+    "    \"\"\"Create a clone of the given structure but with new kinds, based on the new hubbard sites.\n",
+    "\n",
+    "    :param hubbard_structure: ``HubbardStructureData`` instance.\n",
+    "    :param hubbard: the ``hubbard`` output Dict node of a ``HpCalculation``.\n",
+    "    :param magnetization: Dict instance containing the `starting_magnetization` QuantumESPRESSO inputs.\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    reference = hubbard_structure.clone()\n",
+    "    relabeled = reference.clone()\n",
+    "\n",
+    "    relabeled.clear_kinds()\n",
+    "    relabeled.clear_sites()\n",
+    "\n",
+    "    kind_suffix = -1\n",
+    "    type_to_kind = {}\n",
+    "    sites = hubbard_structure.sites\n",
+    "    if magnetization is not None:\n",
+    "        old_magnetization = magnetization.get_dict()\n",
+    "        new_magnetization = old_magnetization.copy()\n",
+    "        # Removing old Hubbard spin-polarized atom label.\n",
+    "        for site in hubbard_dict['sites']:\n",
+    "            new_magnetization.pop(site['kind'], None)\n",
+    "\n",
+    "    # First do the Hubbard sites, popping the kind name suffix each time a new type is encountered. We do the suffix\n",
+    "    # generation ourselves, because the indexing done by hp.x contains gaps in the sequence.\n",
+    "\n",
+    "    # print(type(hubbard_dict['sites']))\n",
+    "    # print(hubbard_dict['sites']) # ! => Returns a list of dicts\n",
+    "    # print(hubbard_structure.sites) # ! => Returns a list of Site objects\n",
+    "    # print(type(hubbard_dict['sites'][0]))\n",
+    "    # print(type(hubbard_structure.sites[0]))\n",
+    "    \n",
+    "    # ! This works now with HubbardStructureData, but ultimately should work with only StructureData\n",
+    "    # ! => Already works with StructureData because it just calls the sites property of the StructureData parent class\n",
+    "    \n",
+    "    final_structuredata = StructureData()\n",
+    "    \n",
+    "    for index, site in enumerate(hubbard_structure.sites):\n",
+    "        # print(index, site)\n",
+    "        raw_site = site.get_raw()\n",
+    "        \n",
+    "        loop_site = deepcopy(site)\n",
+    "        print(type(loop_site))\n",
+    "        loop_site.kind_name = relabel_dict.get(index, site)\n",
+    "        \n",
+    "        print(loop_site)\n",
+    "        print(type(loop_site.kind_name), loop_site.kind_name)\n",
+    "        print(type(loop_site.kind), loop_site.kind)\n",
+    "\n",
+    "        # final_structuredata.append_kind(loop_site.kind_name)\n",
+    "        # final_structuredata.append_site(loop_site)\n",
+    "        \n",
+    "        # print(raw_site)\n",
+    "        # print(help(site))\n",
+    "        # ! Return site from raw: Site(raw_site)\n",
+    "        # raise SystemExit\n",
+    "        # symbol = re.search(r'^([A-za-z]+)[0-9]*$', site['kind']).group(1)\n",
+    "        # try:\n",
+    "        #     # We define a `spin_type`, since hp.x does not distinguish new types according to spin\n",
+    "        #     spin_type = str(int(site['new_type']) * int(site['spin']))\n",
+    "        #     kind_name = type_to_kind[spin_type]\n",
+    "        # except KeyError:\n",
+    "        #     kind_suffix += 1\n",
+    "        #     kind_name = f'{symbol}{kind_suffix}'\n",
+    "        #     type_to_kind[spin_type] = kind_name\n",
+    "        #     if magnetization is not None:\n",
+    "        #         # filling 'starting magnetization' with input value but new label;\n",
+    "        #         # if does not present a starting value, pass.\n",
+    "        #         try:\n",
+    "        #             new_magnetization[kind_name] = old_magnetization[site['kind']]\n",
+    "        #         except KeyError:\n",
+    "        #             pass\n",
+    "\n",
+    "    # for index, site in enumerate(hubbard_dict['sites']):\n",
+    "    #     print(index, site)\n",
+    "    #     symbol = re.search(r'^([A-za-z]+)[0-9]*$', site['kind']).group(1)\n",
+    "    #     try:\n",
+    "    #         # We define a `spin_type`, since hp.x does not distinguish new types according to spin\n",
+    "    #         spin_type = str(int(site['new_type']) * int(site['spin']))\n",
+    "    #         kind_name = type_to_kind[spin_type]\n",
+    "    #     except KeyError:\n",
+    "    #         kind_suffix += 1\n",
+    "    #         kind_name = f'{symbol}{kind_suffix}'\n",
+    "    #         type_to_kind[spin_type] = kind_name\n",
+    "    #         if magnetization is not None:\n",
+    "    #             # filling 'starting magnetization' with input value but new label;\n",
+    "    #             # if does not present a starting value, pass.\n",
+    "    #             try:\n",
+    "    #                 new_magnetization[kind_name] = old_magnetization[site['kind']]\n",
+    "    #             except KeyError:\n",
+    "    #                 pass\n",
+    "\n",
+    "        # loop_site = sites[index]\n",
+    "        # relabeled.append_atom(position=loop_site.position, symbols=symbol, name=kind_name)\n",
+    "\n",
+    "    # # Now add the non-Hubbard sites\n",
+    "    # for site in sites[len(relabeled.sites):]:\n",
+    "    #     symbols = hubbard_structure.get_kind(site.kind_name).symbols\n",
+    "    #     names = hubbard_structure.get_kind(site.kind_name).name\n",
+    "    #     relabeled.append_atom(position=site.position, symbols=symbols, name=names)\n",
+    "\n",
+    "    # outputs = {'hubbard_structure': relabeled}\n",
+    "    # if magnetization is not None:\n",
+    "    #     outputs.update({'starting_magnetization': Dict(new_magnetization)})\n",
+    "\n",
+    "    # return outputs\n",
+    "\n",
+    "# print(hubbard_structure.get_quantum_espresso_hubbard_card())\n",
+    "\n",
+    "structure_relabel_kinds_print(\n",
+    "    hubbard_structure=hubbard_structure_outside,\n",
+    "    hubbard_dict=hubbard_dict_outside,\n",
+    "    magnetization=None\n",
+    ")\n",
+    "\n",
+    "structure_relabel_kinds_mod(\n",
+    "    hubbard_structure=hubbard_structure_outside,\n",
+    "    hubbard_dict=hubbard_dict_outside,\n",
+    "    magnetization=None\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! Trying to append special Mn1 and Mn2 labels in ase.Atoms\n",
+    "\n",
+    "# ! Trying to append special Mn1 and Mn2 labels in pmg.Structure\n",
+    "\n",
+    "# ! Trying to append special Mn1 and Mn2 labels in the structuredata\n",
+    "# for isite, site in enumerate(devel_structuredata.sites):\n",
+    "#     temp_site = deepcopy(site)\n",
+    "#     if isite in (0, 2):\n",
+    "#         temp_site.kind_name = 'Mn1'\n",
+    "#     elif isite in (1, 3):\n",
+    "#         temp_site.kind_name = 'Mn2'\n",
+    "#     new_devel_structuredata.append_site(temp_site)\n",
+    "\n",
+    "\n",
+    "# print(devel_structuredata.kinds)\n",
+    "# print(devel_structuredata.sites)\n",
+    "# print(devel_structuredata.get_site_kindnames())\n",
+    "\n",
+    "\n",
+    "# mn_olivine_pmg.replace(0, 'Mn1')\n",
+    "# mn_olivine_pmg.replace(1, 'Mn2')\n",
+    "# mn_olivine_pmg.replace(2, 'Mn1')\n",
+    "# mn_olivine_pmg.replace(3, 'Mn2')\n",
+    "# print(mn_olivine_pmg.formula)\n",
+    "\n",
+    "# Add magnetization to pmg Structure\n",
+    "# mn_olivine_pmg.add_site_property(\"magmom\", [0.5, 0.5, -0.5, -0.5]+[0]*(mn_olivine_pmg.num_sites-4))\n",
+    "\n",
+    "\n",
+    "# print(mn_olivine_pmg)\n",
+    "\n",
+    "# hubbard_data_inv = HubbardStructureData(structure=mn_olivine_aiida)\n",
+    "# hubbard_data_inv.initialize_onsites_hubbard('Mn', '3d', 4.5618)\n",
+    "# hubbard_data_inv.hubbard_parameters\n",
+    "# hubbard_data_inv.initialize_intersites_hubbard('Mn', '3d', 'O', '2p', 0.0001, number_of_neighbours=7) "
+   ]
   }
  ],
  "metadata": {
