Resolved ordering of configs and SSSP selection.
Atomic ordering of configurations returned from pybat was off due to
.get_sorted_structure_call(). Setting PP family to SSSP v1.2 PBEsol in
the overrides.

--- a/code/notebooks/debug-submission.ipynb
+++ b/code/notebooks/debug-submission.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "6c6ecdf6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "\n",
@@ -42,6 +31,7 @@
     "from aiida_quantumespresso_hp.workflows.hubbard import SelfConsistentHubbardWorkChain\n",
     "from ase.atoms import Atoms\n",
     "from ase.visualize import view\n",
+    "from pyconfsamp.core import change_atom_names\n",
     "\n",
     "load_profile()\n",
     "from pprint import pprint\n",
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "7d3d9dd5",
    "metadata": {},
    "outputs": [
@@ -64,7 +54,7 @@
        "Symbols('Mn4O16P4Li4')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "264f73a2",
    "metadata": {},
    "outputs": [
@@ -304,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "319a826b",
    "metadata": {},
    "outputs": [
@@ -312,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4937\n"
+      "5019\n"
      ]
     }
    ],
@@ -325,7 +315,7 @@
     "true_ss_u0_builder = SelfConsistentHubbardWorkChain.get_builder_from_protocol(\n",
     "    pw_code=pw_code,\n",
     "    hp_code=hp_code,\n",
-    "    hubbard_structure=hubbard_data,\n",
+    "    hubbard_structure=u0_hubbard_data,\n",
     "    protocol='moderate',\n",
     "    overrides=Path(os.path.join('..', 'yaml_files', 'basically_empty_overrides.yaml')),\n",
     "    spin_type=SpinType.COLLINEAR,\n",
@@ -346,8 +336,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# true_ss_u0_submit_pk = 4937\n",
-    "# # !verdi process status 4937\n",
+    "# true_ss_u0_submit_pk = 5019\n",
+    "# # !verdi process status 5019\n",
     "# true_ss_workchain_node = load_node(true_ss_u0_submit_pk)\n",
     "# print(true_ss_workchain_node.mtime - true_ss_workchain_node.ctime)"
    ]
@@ -513,25 +503,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "9b892c53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Symbols('Mn4O16P4Li4')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "5689fe44",
@@ -569,39 +540,6 @@
     }
    ],
    "source": [
-    "def change_atom_names(\n",
-    "    structure_data: StructureData, relabel_dict: dict\n",
-    ") -> StructureData:\n",
-    "    \"\"\"Function to change the atom names in a StructureData object, e.g. for calculations with custom magnetic ordering.\n",
-    "\n",
-    "    Args:\n",
-    "        structure_data (StructureData): Initial StructureData object.\n",
-    "        relabel_dict (dict): Dictionary with atom indices and corresponding new names.\n",
-    "\n",
-    "    Returns:\n",
-    "        StructureData: New StructureData object with changed atom names.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    relabeled = structure_data.clone()\n",
-    "    relabeled.clear_kinds()\n",
-    "    relabeled.clear_sites()\n",
-    "\n",
-    "    for isite, site in enumerate(structure_data.sites):\n",
-    "        atom_symbol = structure_data.get_kind(site.kind_name).symbols\n",
-    "\n",
-    "        if isite in relabel_dict.keys():\n",
-    "            atom_name = relabel_dict[isite]\n",
-    "        else:\n",
-    "            atom_name = structure_data.get_kind(site.kind_name).name\n",
-    "\n",
-    "        relabeled.append_atom(\n",
-    "            position=site.position, symbols=atom_symbol, name=atom_name\n",
-    "        )\n",
-    "\n",
-    "    return relabeled\n",
-    "\n",
-    "\n",
-    "\n",
     "relabel_dict = {\n",
     "    0: \"Mn1\",\n",
     "    1: \"Mn1\",\n",
