Set up calcs with updated SCF_hubbard workchain.

--- a/code/notebooks/testing-scfhubbard.ipynb
+++ b/code/notebooks/testing-scfhubbard.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0d96feaf-8817-453a-b4d0-560f5f29d33c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pathlib\n",
     "import numpy as np\n",
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fafa590d-b1de-4a92-a730-5c6df3d717c7",
    "metadata": {},
    "outputs": [],
@@ -66,20 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "68238387-c713-47b0-b501-28f6cee06b67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hubbard_data = HubbardStructureData(structure=structure)"
+    "hubbard_data = HubbardStructureData.from_structure(structure=structure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1dd1cbca-7de7-483e-a7a6-8b7aa900254b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<HubbardStructureData: uuid: e1aa6e73-128f-4f53-b384-ec57edc902f2 (unstored)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hubbard_data"
    ]
@@ -95,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "97aa36f8-e5b9-435c-b4bd-08c4850b02a9",
    "metadata": {},
    "outputs": [],
@@ -113,12 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f4bc5921-ce79-4e3d-804e-3ed6523e6b93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<HubbardStructureData: uuid: e1aa6e73-128f-4f53-b384-ec57edc902f2 (unstored)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hubbard_data.hubbard_parameters"
+    "hubbard_data"
    ]
   },
   {
@@ -132,12 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3eb86220-436e-4592-af95-a359c8923b6d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hubbard_data.initialize_intersites_hubbard('Ti', '3d', 'O', '2p', 0.0001, number_of_neighbours=7)"
+    "hubbard_data.initialize_intersites_hubbard(\n",
+    "    atom_name='Ti', atom_manifold='3d', neighbour_name='O', neighbour_manifold='2p', value=0.0001\n",
+    "    )\n",
+    "\n",
+    "        # self,\n",
+    "        # atom_name: str,\n",
+    "        # atom_manifold: str,\n",
+    "        # neighbour_name: str,\n",
+    "        # neighbour_manifold: str,\n",
+    "        # value: float = 1e-8,\n",
+    "        # hubbard_type: str = \"V\",\n",
+    "        # use_kinds: bool = True,\n"
    ]
   },
   {
@@ -150,30 +194,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ab486809-31f7-4bc3-9425-0467811da1d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hubbard(parameters=[HubbardParameters(atom_index=0, atom_manifold='3d', neighbour_index=0, neighbour_manifold='3d', translation=(0, 0, 0), value=5.0, hubbard_type='Ueff'), HubbardParameters(atom_index=0, atom_manifold='3d', neighbour_index=1, neighbour_manifold='2p', translation=(0, 0, 0), value=0.0001, hubbard_type='V')], projectors='ortho-atomic', formulation='dudarev')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hubbard_data.hubbard_parameters"
+    "hubbard_data.hubbard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cb1b4b3b-8fe5-4f29-8ee9-54e3f564017f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<HubbardStructureData: uuid: e1aa6e73-128f-4f53-b384-ec57edc902f2 (pk: 19376)>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hubbard_data.store()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5a4c370c-8f7c-401b-93f6-77c51225d4c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19376"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hubbard_data.pk"
    ]
@@ -188,31 +265,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d4913612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hubbard_data = orm.load_node(2502)  # I load the node from the database instead of always regenerating it\n",
-    "print(hubbard_data.get_quantum_espresso_hubbard_card())"
+    "hubbard_data = orm.load_node(19376)  # I load the node from the database instead of always regenerating it\n",
+    "# print(hubbard_data.get_quantum_espresso_hubbard_card())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3e65c68c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pw_code = orm.load_code('qe-dev-pw@lumi-small')\n",
-    "hp_code = orm.load_code('qe-dev-hp@lumi-small')\n",
+    "pw_code = orm.load_code(2182)\n",
+    "hp_code = orm.load_code(2183)\n",
     "\n",
     "builder = SelfConsistentHubbardWorkChain.get_builder_from_protocol(\n",
     "    pw_code=pw_code,\n",
     "    hp_code=hp_code,\n",
     "    hubbard_structure=hubbard_data,\n",
     "    protocol='fast',\n",
-    "    overrides=pathlib.Path('hubbard_overrides.yaml')\n",
+    "    # overrides=pathlib.Path('hubbard_overrides.yaml')\n",
     ")\n",
     "\n",
     "builder.skip_first_relax = True"
@@ -220,82 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "bc968bdc-0817-49a0-8e89-e14323248b86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uuid: 5cbcdb17-012e-48a5-b525-37a2a77430d3 (pk: 19398) (aiida.workflows:quantumespresso.hp.hubbard)\n"
+     ]
+    }
+   ],
    "source": [
-    "third_submit = submit(builder)\n",
-    "print(third_submit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91bee00d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_submit_pk = 2234\n",
-    "second_submit_pk = 2448\n",
-    "third_submit_pk = 2642"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dcbc37b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "verdi process show 2234\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process status 2234\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process report 2234\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fac19fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "verdi process show 2448\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process status 2448\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process report 2448\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edfad9da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "verdi process show 2642\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process status 2642\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo\n",
-    "verdi process report 2642\n",
-    "printf '=%.0s' {1..100}\n",
-    "echo"
+    "submit_node = submit(builder)\n",
+    "print(submit_node)"
    ]
   }
  ],
